argocd/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argocd-ui
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/24,XXX.XXX.XXX.XXX/32
    nginx.ingress.kubernetes.io/limit-connections: 10
    nginx.ingress.kubernetes.io/limit-rps: 50
spec:
  ingressClassName: nginx
  rules:
    - host: "$ARGOCD_HOST"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: argocd-server
              servicePort: 443
